# polygp-sklearn

./: .gitignore  LICENSE  README.md
data/: opti_functions_1D.csv  opti_functions_2D.csv
notebooks/: experimenting_with_gpr.ipynb
polygp/: README.md  pyproject.toml
polygp/src/: polygp.py
utils/: polygp.py
