[project]
name = "polygp_alessiot"
version = "0.0.1"
authors = [
  { name="Alessio Tamburro", email="alessio.tamburro@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alessiot/polygp-sklearn/polygp"
Issues = "https://github.com/alessiot/polygp-sklearn//issues"

[build-system]
requires = ["setuptools>=68.2.2",
"pandas>=2.0.3",
"ipykernel>=6.25.1",
"matplotlib>=3.7.2",
"plotly>=5.15.0",
"nbformat>=5.9.2",
"scipy>=1.11.1",
"scikit-learn>=1.3.0",
"kaleido>=0.2.1",
"optuna>=3.4.0",
"more-itertools>=10.1.0",
]
build-backend = "setuptools.build_meta"
